adding an edit deck function

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -75,6 +75,14 @@
       <button id="add-deck-button">Add Deck</button>
       <div id="deck-input" style="display: none">
         <input type="text" id="new-deck-name" placeholder="Deck Name" />
+        <div id="flashcard-form">
+          <input type="text" id="flashcard-question" placeholder="Question" />
+          <input type="text" id="flashcard-answer" placeholder="Answer" />
+          <button id="add-flashcard-button">Add Flashcard</button>
+        </div>
+        <div id="flashcard-list-container">
+          <ul id="flashcard-list"></ul>
+        </div>
         <button id="save-deck-button">Save Deck</button>
         <button id="cancel-deck-button">Cancel</button>
       </div>
@@ -128,6 +136,7 @@
           <button id="close-flashcard">Close</button>
           <button id="skip-flashcard">Skip</button>
           <button id="flip-flashcard">Flip</button>
+          <button id="next-flashcard">Next</button>
         </div>
       </div>
     </div>
