backend created, and connected to front end with two test buttons

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -141,6 +141,9 @@
       </div>
     </div>
 
+    <button onclick="testBackendConnection()">Test Backend Connection</button>
+    <button onclick="testDatabaseConnection()">Test Database Connection</button>
+
     <script src="app.js"></script>
   </body>
 </html>
