good restore point

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -152,8 +152,8 @@
       </div>
     </div>
 
-    <button onclick="testBackendConnection()">Test Backend Connection</button>
-    <button onclick="testDatabaseConnection()">Test Database Connection</button>
+    <button id="test-backend">Test Backend Connection</button>
+    <button id="test-database">Test Database Connection</button>
 
     <div class="main-content">
       <div id="decks-container">
