flashcard score tracker works

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -109,6 +109,10 @@
     <div class="main-content">
       <div id="flashcard-container" style="display: none">
         <h2>Study Session</h2>
+        <div id="score-display">
+          <span id="current-score">0</span> /
+          <span id="total-possible">0</span> points
+        </div>
         <div id="flashcard">
           <div id="question-text"></div>
           <div id="answer-section">
