--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -76,14 +76,14 @@
         <label for="theme-toggle">Theme: Light/Dark</label>
         <input type="checkbox" id="theme-toggle" />
       </div>
-      <div>
+      <!-- <div>
         <label>Edit Decks:</label>
         <button id="edit-decks">Enter Edit Mode</button>
       </div>
       <div>
         <label>Reset Decks:</label>
         <button id="reset-decks">Remove All Decks</button>
-      </div>
+      </div> -->
       <div>
         <button id="go-home-link">Go Back Home</button>
       </div>
