--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -139,7 +139,7 @@
       <div class="content-wrapper">
         <!-- Leaderboard Container -->
         <div id="leaderboard-container">
-          <h2>Top 5 High Scores</h2>
+          <h2>Top High Scores</h2>
           <table id="leaderboard-table">
             <thead>
               <tr>
